# pdfbind

./: .gitignore  README.md  pyproject.toml
pdfbind/: main.py
