[tool.poetry]
name = "pdfcomposer"
version = "0.1.0"
description = ""
authors = ["Sasha Ovsankin <sasha@ovsankin.com>"]
readme = "README.md"
license = "Apache-2.0"


[tool.poetry.dependencies]
python = "^3.12"
pikepdf = "^9.2.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdfbind = "pdfbind.main:main"
